--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,14 @@
     @apply text-5xl ;
   }
 
+  h2 {
+    @apply text-4xl ;
+  }
+
+  h3 {
+    @apply text-3xl ;
+  }
+
   input[type='text'],
   input[type='email'],
   input[type='password'] {
