--- a/src/index.css
+++ b/src/index.css
@@ -32,4 +32,44 @@
   button[type='submit'] {
     @apply rounded-full mt-4 px-4 py-2 font-semibold text-sm bg-sky-500 text-white shadow-xl;
   }
+
+  h4 {
+    @apply text-lg font-semibold;
+  }
+
+  ul {
+    @apply list-disc;
+  }
+
+  p {
+    @apply cursor-pointer;
+  }
+
+  #list-group-item {
+    @apply flex items-center justify-between;
+  }
+  
+  .btn {
+    @apply inline-block align-middle text-center select-none border font-normal whitespace-nowrap rounded py-1 px-3 leading-normal no-underline mt-1;
+  }
+
+  .btn-primary {
+    @apply bg-blue-600 text-white hover:bg-blue-700;
+  }
+
+  .btn-warning {
+    @apply bg-orange-400 text-black hover:bg-orange-500;
+  }
+
+  .btn-block {
+    @apply block w-full;
+  }
+
+  .btn-danger {
+    @apply bg-red-600 text-white hover:bg-red-700;
+  }
+
+  .btn-outline-primary {
+    @apply text-blue-600 border-blue-600 hover:text-white bg-white hover:bg-blue-600;
+  }
 }
